Added notes about where I got stuck.

--- a/hw_1/hw_1_assignment.ipynb
+++ b/hw_1/hw_1_assignment.ipynb
@@ -221,6 +221,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Here's where I got stuck.\n",
+    "\n",
+    "Shifting by the estimated offset works for some of the frames, but fails for others. It seems like the failure cases have zooms as well as x/y translations?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 164,
    "metadata": {
@@ -708,6 +717,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Here's where I got stuck.\n",
     "Let's first try to do things in an educated way. Most adult humans can only hear sounds from 20Hz to 20kHz, so let's chop of anything outside that range...\n",
     "\n",
     "... though it becomes apparent that simply zeroing out part of the DFT is going to result in ringing, which we don't want. So we need to use some sort of fancy filter, which I don't yet understand."
@@ -1214,6 +1224,13 @@
     "<img src=\"https://www.evernote.com/l/AUU-KkH3Z-lBdKokzCzVIUe53YZLQ9e_AuMB/image.png\">\n",
     "\n",
     "https://twitter.com/NateSilver538/status/769565612955824128"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Didn't get a chance to start this one."
    ]
   },
   {
